Updated next buttons to not loop back around and prevent out of bounds

--- a/css/styles.css
+++ b/css/styles.css
@@ -157,7 +157,7 @@ h2 {
 	border-color: #094b80;
 	border-width: 2px;
 	border-style: solid;
-	padding: 0;
+	padding: 0 0 4px 0;
 	display: none;
 }
 
@@ -247,4 +247,28 @@ h2 {
 	background-color: white;
 	color: #094b80;
 	cursor: pointer;
+}
+
+.disabled {
+	opacity: 0.5;
+	cursor: default;
+
+}
+
+#questionnaire-submit { 
+	display: none;
+	background-color: #659B5E;
+	border-color: #659B5E;
+}
+
+#questionnaire-submit:hover { 
+	background-color: white;
+	color: #659B5E;
+	border-color: #659B5E;
+}
+
+#questionnaire {
+	border-color: #094b80;
+	background-color: white;
+	color: #094b80;
 }
